# genai

./: pyproject.toml
src/mcp_server/: pyproject.toml
src/mcp_server/src/mcp_server/: __init__.py  cli.py
