[project]
name = "mcp_server"
version = "0.0.0"
description = "MCP Server"
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "utils",
    "typer>=0.12.5",
    "mcp[cli]>=1.12.0",
]

[project.scripts]
mcp_server = "mcp_server.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }
